# serializer version: 1
# name: test_psi_sensor[sensor.system_monitor_cpu_pressure_some_10s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor CPU Pressure Some 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_cpu_pressure_some_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.1',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_cpu_pressure_some_300s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor CPU Pressure Some 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_cpu_pressure_some_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.3',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_cpu_pressure_some_60s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor CPU Pressure Some 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_cpu_pressure_some_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2.2',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_cpu_pressure_some_total]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor CPU Pressure Some Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_cpu_pressure_some_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12345',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_io_pressure_full_10s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Full 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_full_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.7',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_io_pressure_full_300s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Full 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_full_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.9',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_io_pressure_full_60s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Full 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_full_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.8',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_io_pressure_full_total]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Full Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_full_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '789',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_io_pressure_some_10s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Some 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_some_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.7',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_io_pressure_some_300s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Some 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_some_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9.9',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_io_pressure_some_60s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Some 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_some_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8.8',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_io_pressure_some_total]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Some Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_some_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '67890',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_memory_pressure_full_10s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Full 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_full_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.4',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_memory_pressure_full_300s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Full 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_full_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.6',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_memory_pressure_full_60s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Full 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_full_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.5',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_memory_pressure_full_total]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Full Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_full_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '432',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_memory_pressure_some_10s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Some 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_some_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.4',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_memory_pressure_some_300s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Some 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_some_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6.6',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_memory_pressure_some_60s_average]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Some 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_some_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.5',
  })
# ---
# name: test_psi_sensor[sensor.system_monitor_memory_pressure_some_total]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Some Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_some_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '54321',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_cpu_pressure_some_10s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor CPU Pressure Some 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_cpu_pressure_some_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_cpu_pressure_some_300s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor CPU Pressure Some 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_cpu_pressure_some_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_cpu_pressure_some_60s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor CPU Pressure Some 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_cpu_pressure_some_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_cpu_pressure_some_total-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor CPU Pressure Some Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_cpu_pressure_some_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_io_pressure_full_10s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Full 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_full_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_io_pressure_full_300s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Full 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_full_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_io_pressure_full_60s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Full 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_full_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_io_pressure_full_total-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Full Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_full_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_io_pressure_some_10s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Some 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_some_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_io_pressure_some_300s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Some 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_some_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_io_pressure_some_60s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Some 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_some_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_io_pressure_some_total-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor IO Pressure Some Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_io_pressure_some_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_memory_pressure_full_10s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Full 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_full_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_memory_pressure_full_300s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Full 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_full_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_memory_pressure_full_60s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Full 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_full_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_memory_pressure_full_total-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Full Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_full_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_memory_pressure_some_10s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Some 10s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_some_10s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_memory_pressure_some_300s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Some 300s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_some_300s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_memory_pressure_some_60s_average-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Some 60s Average',
      'icon': 'mdi:gauge',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_some_60s_average',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_psi_sensor_unavailable[sensor.system_monitor_memory_pressure_some_total-unavailable]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'System Monitor Memory Pressure Some Total',
      'icon': 'mdi:timer-outline',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.system_monitor_memory_pressure_some_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor[System Monitor Battery - attributes]
  ReadOnlyDict({
    'device_class': 'battery',
    'friendly_name': 'System Monitor Battery',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Battery - state]
  '93'
# ---
# name: test_sensor[System Monitor CPU Pressure Some 10s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor CPU Pressure Some 10s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor CPU Pressure Some 10s Average - state]
  '1.1'
# ---
# name: test_sensor[System Monitor CPU Pressure Some 300s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor CPU Pressure Some 300s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor CPU Pressure Some 300s Average - state]
  '3.3'
# ---
# name: test_sensor[System Monitor CPU Pressure Some 60s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor CPU Pressure Some 60s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor CPU Pressure Some 60s Average - state]
  '2.2'
# ---
# name: test_sensor[System Monitor CPU Pressure Some Total - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor CPU Pressure Some Total',
    'icon': 'mdi:timer-outline',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
  })
# ---
# name: test_sensor[System Monitor CPU Pressure Some Total - state]
  '12345'
# ---
# name: test_sensor[System Monitor Disk free / - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Disk free /',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[System Monitor Disk free / - state]
  '200.0'
# ---
# name: test_sensor[System Monitor Disk free /media/share - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Disk free /media/share',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[System Monitor Disk free /media/share - state]
  '200.0'
# ---
# name: test_sensor[System Monitor Disk usage / - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Disk usage /',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Disk usage / - state]
  '60.0'
# ---
# name: test_sensor[System Monitor Disk usage /home/notexist/ - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Disk usage /home/notexist/',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Disk usage /home/notexist/ - state]
  '60.0'
# ---
# name: test_sensor[System Monitor Disk usage /media/share - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Disk usage /media/share',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Disk usage /media/share - state]
  '60.0'
# ---
# name: test_sensor[System Monitor Disk use / - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Disk use /',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[System Monitor Disk use / - state]
  '300.0'
# ---
# name: test_sensor[System Monitor Disk use /media/share - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Disk use /media/share',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor[System Monitor Disk use /media/share - state]
  '300.0'
# ---
# name: test_sensor[System Monitor IO Pressure Full 10s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IO Pressure Full 10s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor IO Pressure Full 10s Average - state]
  '0.7'
# ---
# name: test_sensor[System Monitor IO Pressure Full 300s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IO Pressure Full 300s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor IO Pressure Full 300s Average - state]
  '0.9'
# ---
# name: test_sensor[System Monitor IO Pressure Full 60s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IO Pressure Full 60s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor IO Pressure Full 60s Average - state]
  '0.8'
# ---
# name: test_sensor[System Monitor IO Pressure Full Total - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IO Pressure Full Total',
    'icon': 'mdi:timer-outline',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
  })
# ---
# name: test_sensor[System Monitor IO Pressure Full Total - state]
  '789'
# ---
# name: test_sensor[System Monitor IO Pressure Some 10s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IO Pressure Some 10s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor IO Pressure Some 10s Average - state]
  '7.7'
# ---
# name: test_sensor[System Monitor IO Pressure Some 300s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IO Pressure Some 300s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor IO Pressure Some 300s Average - state]
  '9.9'
# ---
# name: test_sensor[System Monitor IO Pressure Some 60s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IO Pressure Some 60s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor IO Pressure Some 60s Average - state]
  '8.8'
# ---
# name: test_sensor[System Monitor IO Pressure Some Total - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IO Pressure Some Total',
    'icon': 'mdi:timer-outline',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
  })
# ---
# name: test_sensor[System Monitor IO Pressure Some Total - state]
  '67890'
# ---
# name: test_sensor[System Monitor IPv4 address eth0 - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IPv4 address eth0',
  })
# ---
# name: test_sensor[System Monitor IPv4 address eth0 - state]
  '192.168.1.1'
# ---
# name: test_sensor[System Monitor IPv4 address eth1 - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IPv4 address eth1',
  })
# ---
# name: test_sensor[System Monitor IPv4 address eth1 - state]
  '192.168.10.1'
# ---
# name: test_sensor[System Monitor IPv6 address eth0 - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IPv6 address eth0',
  })
# ---
# name: test_sensor[System Monitor IPv6 address eth0 - state]
  '2a00:1f:2103:3a01:3333:2222:1111:0000'
# ---
# name: test_sensor[System Monitor IPv6 address eth1 - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor IPv6 address eth1',
  })
# ---
# name: test_sensor[System Monitor IPv6 address eth1 - state]
  'unknown'
# ---
# name: test_sensor[System Monitor Last boot - attributes]
  ReadOnlyDict({
    'device_class': 'timestamp',
    'friendly_name': 'System Monitor Last boot',
  })
# ---
# name: test_sensor[System Monitor Last boot - state]
  '2024-02-24T15:00:00+00:00'
# ---
# name: test_sensor[System Monitor Load (1 min) - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Load (1 min)',
    'icon': 'mdi:cpu-64-bit',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_sensor[System Monitor Load (1 min) - state]
  '1'
# ---
# name: test_sensor[System Monitor Load (15 min) - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Load (15 min)',
    'icon': 'mdi:cpu-64-bit',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_sensor[System Monitor Load (15 min) - state]
  '3'
# ---
# name: test_sensor[System Monitor Load (5 min) - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Load (5 min)',
    'icon': 'mdi:cpu-64-bit',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_sensor[System Monitor Load (5 min) - state]
  '2'
# ---
# name: test_sensor[System Monitor Memory Pressure Full 10s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Memory Pressure Full 10s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Memory Pressure Full 10s Average - state]
  '0.4'
# ---
# name: test_sensor[System Monitor Memory Pressure Full 300s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Memory Pressure Full 300s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Memory Pressure Full 300s Average - state]
  '0.6'
# ---
# name: test_sensor[System Monitor Memory Pressure Full 60s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Memory Pressure Full 60s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Memory Pressure Full 60s Average - state]
  '0.5'
# ---
# name: test_sensor[System Monitor Memory Pressure Full Total - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Memory Pressure Full Total',
    'icon': 'mdi:timer-outline',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
  })
# ---
# name: test_sensor[System Monitor Memory Pressure Full Total - state]
  '432'
# ---
# name: test_sensor[System Monitor Memory Pressure Some 10s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Memory Pressure Some 10s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Memory Pressure Some 10s Average - state]
  '4.4'
# ---
# name: test_sensor[System Monitor Memory Pressure Some 300s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Memory Pressure Some 300s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Memory Pressure Some 300s Average - state]
  '6.6'
# ---
# name: test_sensor[System Monitor Memory Pressure Some 60s Average - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Memory Pressure Some 60s Average',
    'icon': 'mdi:gauge',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Memory Pressure Some 60s Average - state]
  '5.5'
# ---
# name: test_sensor[System Monitor Memory Pressure Some Total - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Memory Pressure Some Total',
    'icon': 'mdi:timer-outline',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    'unit_of_measurement': <UnitOfTime.MICROSECONDS: 'μs'>,
  })
# ---
# name: test_sensor[System Monitor Memory Pressure Some Total - state]
  '54321'
# ---
# name: test_sensor[System Monitor Memory free - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Memory free',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[System Monitor Memory free - state]
  '40.0'
# ---
# name: test_sensor[System Monitor Memory usage - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Memory usage',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Memory usage - state]
  '40.0'
# ---
# name: test_sensor[System Monitor Memory use - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Memory use',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[System Monitor Memory use - state]
  '60.0'
# ---
# name: test_sensor[System Monitor Network in eth0 - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Network in eth0',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[System Monitor Network in eth0 - state]
  '100.0'
# ---
# name: test_sensor[System Monitor Network in eth1 - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Network in eth1',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[System Monitor Network in eth1 - state]
  '200.0'
# ---
# name: test_sensor[System Monitor Network out eth0 - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Network out eth0',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[System Monitor Network out eth0 - state]
  '100.0'
# ---
# name: test_sensor[System Monitor Network out eth1 - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Network out eth1',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[System Monitor Network out eth1 - state]
  '200.0'
# ---
# name: test_sensor[System Monitor Network throughput in eth0 - attributes]
  ReadOnlyDict({
    'device_class': 'data_rate',
    'friendly_name': 'System Monitor Network throughput in eth0',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
  })
# ---
# name: test_sensor[System Monitor Network throughput in eth0 - state]
  'unknown'
# ---
# name: test_sensor[System Monitor Network throughput in eth1 - attributes]
  ReadOnlyDict({
    'device_class': 'data_rate',
    'friendly_name': 'System Monitor Network throughput in eth1',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
  })
# ---
# name: test_sensor[System Monitor Network throughput in eth1 - state]
  'unknown'
# ---
# name: test_sensor[System Monitor Network throughput out eth0 - attributes]
  ReadOnlyDict({
    'device_class': 'data_rate',
    'friendly_name': 'System Monitor Network throughput out eth0',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
  })
# ---
# name: test_sensor[System Monitor Network throughput out eth0 - state]
  'unknown'
# ---
# name: test_sensor[System Monitor Network throughput out eth1 - attributes]
  ReadOnlyDict({
    'device_class': 'data_rate',
    'friendly_name': 'System Monitor Network throughput out eth1',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
  })
# ---
# name: test_sensor[System Monitor Network throughput out eth1 - state]
  'unknown'
# ---
# name: test_sensor[System Monitor None - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor None',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': 'rpm',
  })
# ---
# name: test_sensor[System Monitor None - state]
  '1300'
# ---
# name: test_sensor[System Monitor Open file descriptors pip - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Open file descriptors pip',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_sensor[System Monitor Open file descriptors pip - state]
  '15'
# ---
# name: test_sensor[System Monitor Open file descriptors python3 - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Open file descriptors python3',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_sensor[System Monitor Open file descriptors python3 - state]
  '42'
# ---
# name: test_sensor[System Monitor Packets in eth0 - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Packets in eth0',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
  })
# ---
# name: test_sensor[System Monitor Packets in eth0 - state]
  '50'
# ---
# name: test_sensor[System Monitor Packets in eth1 - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Packets in eth1',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
  })
# ---
# name: test_sensor[System Monitor Packets in eth1 - state]
  '150'
# ---
# name: test_sensor[System Monitor Packets out eth0 - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Packets out eth0',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
  })
# ---
# name: test_sensor[System Monitor Packets out eth0 - state]
  '50'
# ---
# name: test_sensor[System Monitor Packets out eth1 - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Packets out eth1',
    'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
  })
# ---
# name: test_sensor[System Monitor Packets out eth1 - state]
  '150'
# ---
# name: test_sensor[System Monitor Processor temperature - attributes]
  ReadOnlyDict({
    'device_class': 'temperature',
    'friendly_name': 'System Monitor Processor temperature',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[System Monitor Processor temperature - state]
  '50.0'
# ---
# name: test_sensor[System Monitor Processor use - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Processor use',
    'icon': 'mdi:cpu-64-bit',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Processor use - state]
  '10'
# ---
# name: test_sensor[System Monitor Swap free - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Swap free',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[System Monitor Swap free - state]
  '40.0'
# ---
# name: test_sensor[System Monitor Swap usage - attributes]
  ReadOnlyDict({
    'friendly_name': 'System Monitor Swap usage',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[System Monitor Swap usage - state]
  '60.0'
# ---
# name: test_sensor[System Monitor Swap use - attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'System Monitor Swap use',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    'unit_of_measurement': <UnitOfInformation.MEBIBYTES: 'MiB'>,
  })
# ---
# name: test_sensor[System Monitor Swap use - state]
  '60.0'
# ---
# name: test_sensor[System Monitor Timestamp - attributes]
  ReadOnlyDict({
    'device_class': 'timestamp',
    'friendly_name': 'System Monitor Timestamp',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_sensor[System Monitor Timestamp - state]
  '2024-02-24T19:37:00+00:00'
# ---
